FIX: chat navbar followups
- displays title on threads screen on one line instead of two on mobile

- ensures chat is not overflowing the screen width

--- a/plugins/chat/assets/stylesheets/common/base-common.scss
+++ b/plugins/chat/assets/stylesheets/common/base-common.scss
@@ -271,6 +271,7 @@ html.has-full-page-chat {
 
       .main-chat-outlet {
         min-height: 0;
+        max-width: 100vw;
       }
     }
   }
